--- a/.github/workflows/pros-build.yml
+++ b/.github/workflows/pros-build.yml
@@ -1,4 +1,4 @@
-name: PROS Build Example
+name: PROS Build
 
 on:
   push:
@@ -18,4 +18,3 @@ jobs:
       - name: Run LemLib/pros-build
         id: test
         uses: LemLib/pros-build@v4.0.0
-        
